Bug 1792876 - Don't use special colors on categories in High Contrast mode. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D158426

--- a/mail/themes/shared/mail/aboutAddonsExtra.css
+++ b/mail/themes/shared/mail/aboutAddonsExtra.css
@@ -27,6 +27,12 @@
   }
 }
 
+@media (prefers-contrast) {
+  :root {
+    --in-content-categories-background: transparent;
+  }
+}
+
 body {
   /* Override the absolute (px) font-size value in common-shared.css. */
   font-size: 1.1rem;
@@ -51,15 +57,21 @@ body {
 }
 
 #categories > .category[selected] {
-  background-color: var(--in-content-button-background) !important;
-  color: unset;
   font-weight: 500;
 }
 
-#categories > .category[selected]:focus {
-  background-color: var(--in-content-item-selected) !important;
-  color: var(--in-content-item-selected-text);
-  outline: none;
+
+@media not (prefers-contrast) {
+  #categories > .category[selected] {
+    background-color: var(--in-content-button-background) !important;
+    color: unset;
+  }
+
+  #categories > .category[selected]:focus {
+    background-color: var(--in-content-item-selected) !important;
+    color: var(--in-content-item-selected-text);
+    outline: none;
+  }
 }
 
 .category-name {
